...
    private var estimatedProgressObservation: NSKeyValueObservation?
    var presenter: WebViewPresenterProtocol?
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "WebViewViewController"
        webView.navigationDelegate = self
        setupWebView()
        presenter?.viewDidLoad()
    }
    
    private func setupWebView() {
...
